kubernetes-manifests-mainnet/utilities-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-utility-api
  namespace: backend-utility-api-mainnet
  labels:
    app: backend-utility-api
spec:
  selector:
    matchLabels:
      app: backend-utility-api
  replicas: 1
  template:
    metadata:
      labels:
        app: backend-utility-api
    spec:
      containers:
      - name: backend-utility-api
        image: 570870523275.dkr.ecr.us-east-2.amazonaws.com/backend-utility-api:mainnet-latest
        resources:
          requests:
            cpu: 1
            memory: 512Mi
          limits:
            cpu: 1
            memory: 800Mi
        ports:
        - containerPort: 3006
          name: http
