kubernetes-manifests-mainnet/utilities-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-utility-api
  namespace: backend-utility-api-mainnet
spec:
  selector:
    app: backend-utility-api
  type: ClusterIP
  ports:
  - name: backend-utility-api
    protocol: TCP
    port: 3006
    targetPort: 3006
